# dissertation-extreme-classification

./: .gitignore  .gitmodules  README.md  cifar_train.py  pyproject.toml  requirements.txt
LDAM-DRW/: .gitignore  README.md  cifar_train.py  ldam_drw.ipynb  losses.py
LDAM-DRW/log/cifar10_resnet32_CE_ClassWeight_exp_0.01_08/: args.txt  events.out.tfevents.1697501447.akaash-ubuntu  log_test.csv  log_train.csv
LDAM-DRW/log/cifar10_resnet32_CE_None_exp_0.01_01/: args.txt  events.out.tfevents.1697490503.akaash-ubuntu  log_test.csv  log_train.csv
LDAM-DRW/log/cifar10_resnet32_CE_Reweight_exp_0.01_0.9999_04/: args.txt  events.out.tfevents.1697494174.akaash-ubuntu  log_test.csv  log_train.csv
LDAM-DRW/log/cifar10_resnet32_CE_Reweight_exp_0.01_0.999_05/: args.txt  events.out.tfevents.1697497927.akaash-ubuntu  log_test.csv  log_train.csv
LDAM-DRW/log/cifar10_resnet32_CE_Reweight_exp_0.01_0.99_06/: args.txt  events.out.tfevents.1697413371.akaash-ubuntu  log_test.csv  log_train.csv
LDAM-DRW/log/cifar10_resnet32_CE_Reweight_exp_0.01_0.9_07/: args.txt  log_test.csv  (+2 more)
extreme_classification/notebooks/: Linear-classifier-binary-imbalanced-overlapping.ipynb  Linear-classifier-multiclass.ipynb  Linear_classifier_binary_imbalanced_overlapping.ipynb  Linear_classifier_binary_imbalanced_overlapping_cao.ipynb  Linear_classifier_binary_imbalanced_separable.ipynb  Linear_classifier_losses_tan_cao.ipynb  Linear_classifier_multiclass.ipynb  linear_classifier_binary.ipynb  linear_classifier_multiclass.ipynb
logit_adjustment/: README.md  logit_adjustment.ipynb  main.py  utils.py
(+142 files in other folders)
