[project]
name = "dissertation-extreme-classification"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "altair",
    "ipykernel",
    "matplotlib",
    "numpy",
    "pandas",
    "requests",
    "scikit_learn",
    "tensorboard",
    "tensorboardX",
    "tensorflow",
    "torch",
    "torchvision",
    "torch-tb-profiler>=0.2.0"
]